@@ -190,7 +190,7 @@ MW_OPTIONSMENU_SENTSEG=&Segmentation...
 
 MW_OPTIONSMENU_ALWAYS_CONFIRM_QUIT=&Always Confirm Quit
 
-MW_OPTIONSMENU_RESTORE_GUI=&Restore user interface defaults
+MW_OPTIONSMENU_RESTORE_GUI=&Restore main window
 
 TF_MENU_HELP=&Help
 
